--- a/templates/base.html
+++ b/templates/base.html
@@ -12,90 +12,137 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
     <style>
+        @font-face {
+            font-family: 'establishRoomNo703OTF';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2112@1.0/establishRoomNo703OTF.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+        h1 {
+            font-family: 'establishRoomNo703OTF';
+        }
         .main {
             background-color: green;
             color: white;
-            height: 700px;
+            height: 600px;
 
             display: flex;
             flex-direction: column;
-            /*가로정렬은 row*/
             align-items: center;
             justify-content: center;
 
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.pinimg.com/originals/64/f0/a6/64f0a684f97424000058c8acac367812.jpg);
+            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://file.notion.so/f/s/bdbe0771-ce9d-456e-b4f5-5710620b8381/Untitled.jpeg?id=1c0d6939-9470-4897-a6c3-8226f9dfe574&table=block&spaceId=24c771f9-c044-4d63-851f-660172d58cb7&expirationTimestamp=1681353681852&signature=6Nk64PqQL6JEcmCjD-G9E93XJmrb-Lji9K-VHBCWCKg&downloadName=Untitled.jpeg);
             background-position: center;
             background-size: cover;
         }
 
-        .mycards {
+                .mycards {
             width: 1000px;
             margin: 100px auto 100px auto;
 
+        }
+
+        .card {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 250px;
+            gap: 20px; /* 카드 간격 조절 */
+        }
+
+        .pagination .page-link {
+            background-color: white;
+            color: black;
+        }
+
+        .pagination .page-item.disabled .page-link {
+            background-color: white;
+            color: black;
+        }
+
+        .pagination .page-item.active .page-link {
+            background-color: lightgray;
+            border: solid darkgray 1px;
+            color: black;
+        }
+
+        footer {
+            background-color: lightgray;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+        }
+
+        header {
+
+            z-index: 999;
         }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container px-4 px-lg-5">
-            {# <--!타이틀-->#}
-                <a class="navbar-brand" href="/">친한사2조</a>
-                {% if user.is_authenticated %}
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation"><span
-                        class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link" href="/post/create/">글쓰기</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">지역선택</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/">모든 지역</a></li>
-                                <li><a class="dropdown-item" href="/">서울</a></li>
-                                <li><a class="dropdown-item" href="/">경기도</a></li>
-                                <li><a class="dropdown-item" href="/">강원도</a></li>
-                                <li><a class="dropdown-item" href="/">충청도</a></li>
-                                <li><a class="dropdown-item" href="/">전라도</a></li>
-                                <li><a class="dropdown-item" href="/">경상도</a></li>
-                                <li><a class="dropdown-item" href="/">제주도</a></li>
-                            </ul>
-                        </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container px-4 px-lg-5">
+{#        <--!타이틀-->#}
+        <a class="navbar-brand" href="#!">친한사2조</a>
+        {#                {% if  user.is_authenticated %}#}
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#!">글쓰기</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">지역선택</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#!">모든 지역</a></li>
+                        <li><a class="dropdown-item" href="#!">서울</a></li>
+                        <li><a class="dropdown-item" href="#!">경기도</a></li>
+                        <li><a class="dropdown-item" href="#!">강원도</a></li>
+                        <li><a class="dropdown-item" href="#!">충청도</a></li>
+                        <li><a class="dropdown-item" href="#!">전라도</a></li>
+                        <li><a class="dropdown-item" href="#!">경상도</a></li>
+                        <li><a class="dropdown-item" href="#!">제주도</a></li>
                     </ul>
-                    {% endif %}
-                    <form class="form-inline my-2 my-lg-0">
-                        {% if not user.is_authenticated %}
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'login' %}"> 로그인 <span class="sr-only"></span></a>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'signup' %}"> 회원가입 <span class="sr-only"></span></a>
-                            </li>
-                        </ul>
-                        {% else %}
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item disable">
-                                <span class="nav-link">
-                                    {# {{ user.username }}님 반갑습니다!#}
-                                </span>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="/"> 마이페이지 </a>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'logout' %}"> 로그아웃 </a>
-                            </li>
-                        </ul>
-                        {% endif %}
-                    </form>
-                </div>
-
+                </li>
+            </ul>
+            {#                    {% endif %}#}
+            <form class="form-inline my-2 my-lg-0">
+                {#                        {% if not user.is_authenticated %}#}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/sign-in"> Sign In <span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/sign-up"> Sign Up <span class="sr-only"></span></a>
+                    </li>
+                </ul>
+                {#                        {% else %}#}
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item disable">
+                       <span class="nav-link">
+{#                           {{ user.username }}님 반갑습니다!#}
+                       </span>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/"> 마이페이지 </a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/logout"> 로그아웃 </a>
+                </li>
+                </ul>
+{#                {% endif %}#}
+            </form>
         </div>
-    </nav>
-    {% block content %}
+    </div>
+</nav>
+{% block content %}
 
-    {% endblock %}
+{% endblock %}
+
 
 </body>
 
