--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -39,9 +39,9 @@
                                             </div>
                                         </div>
                                         <div class="d-flex justify-content-start">
-                                            <a href="#!"><button type="button" class="btn btn-primary me-2">내가 쓴 글 게시글 {{ user.post }}개</button></a>
+                                            <a href="#!"><button type="button" class="btn me-2" style="background-color:darkorange; color:White">내가 쓴 글 게시글 {{ user.post }}개</button></a>
                                             <a href="{% url 'profile_edit' %}">
-                                                <button type="button" class="btn_profile">프로필 수정</button>
+                                                <button type="button" class="btn" style="background-color:darkorange; color:White">프로필 수정</button>
                                             </a>
                                         </div>
                                     </div>
