--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 
 <html lang="en">
@@ -11,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
+    <!-- <link href ="{% static 'css/style.css' %}" rel="stylesheet"> -->
     <style>
         @font-face {
             font-family: 'establishRoomNo703OTF';
@@ -128,7 +130,6 @@
         padding: 20px;
       }
 
-    </style>
     </style>
 
 </head>
