--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -91,27 +91,50 @@
         </div>
         {% endif %}
     </div>    
-    <form action="{%url 'comment' id=post.id%}"method = 'post'>
-        {%csrf_token%}
-        <input type="text" name="comment">
-        <input type="submit" value="작성하기">
-    </form>
-    <ul>
-        {% for comment in comments%}
-            <li>이름 :{{comment.name}}</li>
-            <li>내용 :{{comment.comment}}</li>
-            <li>작성일: {{comment.created_at}}</li>
-            {%if comment.user == request.user%}
-                <li><a href="{%url 'comment_delete' id=post.id comment_id=comment.id%}">삭제</a></li>
-            {%else%}
-                <li><a onclick="notuser()">삭제</a></li>
-            {%endif%}
 
-        {% endfor %}
-    </ul>
-    <script>
-        function notuser() {
-            alert('권한이 없습니다');
-        }
-    </script>
+<!-- 댓글 달기 -->
+<div style="display: grid; place-items: center; ">
+    <form action="{%url 'comment' id=post.id%}" method = 'post'>
+        {%csrf_token%}
+        <div>
+        </div>
+        <input type="text" name="comment" style="width: 300px; height: 35px;">
+        <input type="submit" class="btn me-2" style="background-color:darkorange; color:White" value="작성하기">
+    </form>
+    {% for comment in comments%}
+        <div class="card" style="width: 50rem; margin-top: 20px;">
+            <div class="card-body">
+                <h5 class="card-title">{{comment.name}}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">{{comment.created_at}}</h6>
+                <!-- <p class="card-text">{{comment.comment}}</p> -->
+                <p class="card-text"><input class='test'type="text" name="comment" value="{{comment.comment}}"></p> <!-- 수정 될 댓글 -->
+                <div style="float: right">
+                {% if comment.user == request.user %}                
+                    <a class="btn btn-outline-dark" data-bs-toggle="modal"  onclick="notuser()">수정</a>
+                    <a href="{%url 'comment_delete' id=post.id comment_id=comment.id%}" class="btn btn-outline-dark">삭제</a>
+                {%else%}
+                
+                    <a onclick="notuser()">삭제</a>
+                {% endif %}
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+</div>
+
+<style>
+.test{
+    border:none;
+    width:100%;
+    height:100px;
+}
+.test:focus{
+    outline:none !important;
+}
+</style>
+<script>
+    function notuser() {
+        alert('권한이 없습니다');
+    }
+</script>
 {% endblock %}
