--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -23,7 +23,7 @@
                                         <div class="row pt-1">
                                             <div class="col-6 mb-3">
                                                 <h6>Email</h6>
-                                                <p class="text-muted">{{ user.email }},이메일</p>
+                                                <p class="text-muted">{{ user.email }}</p>
                                             </div>
                                             <div class="col-6 mb-3">
                                                 <h6>Phone</h6>
@@ -51,6 +51,7 @@
                     </div>
                 </div>
             </div>
+           
         </div>
     </section>
     
