--- a/templates/post/detail.html
+++ b/templates/post/detail.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{%load static%}
+
 {% block title %}
     POST
 {% endblock %}
@@ -102,19 +104,26 @@
         <input type="submit" class="btn me-2" style="background-color:darkorange; color:White" value="작성하기">
     </form>
     {% for comment in comments%}
-        <div class="card" style="width: 50rem; margin-top: 20px;">
+        <div class="card{{comment.id}}" style="width: 50rem; margin-top: 20px;">
             <div class="card-body">
                 <h5 class="card-title">{{comment.name}}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">{{comment.created_at}}</h6>
-                <!-- <p class="card-text">{{comment.comment}}</p> -->
-                <p class="card-text"><input class='test'type="text" name="comment" value="{{comment.comment}}"></p> <!-- 수정 될 댓글 -->
+                <p id="comment{{comment.id}}"class="card-text">{{comment.comment}}</p>
+                <form action="{%url 'comment_edit' id=post.id comment_id=comment.id %}" method="POST">
+                    {%csrf_token%}
+                    <div id='comment_edit{{comment.id}}'>
+
+                    </div>
+                </form>
                 <div style="float: right">
-                {% if comment.user == request.user %}                
-                    <a class="btn btn-outline-dark" data-bs-toggle="modal"  onclick="notuser()">수정</a>
+                {% if comment.user == request.user %}
+                <div class="comment_control{{comment.id}}">                
+                    <a class="btn btn-outline-dark" data-bs-toggle="modal"  onclick="edit('{{comment.id}}')">수정</a>
                     <a href="{%url 'comment_delete' id=post.id comment_id=comment.id%}" class="btn btn-outline-dark">삭제</a>
+                </div>
                 {%else%}
-                
-                    <a onclick="notuser()">삭제</a>
+                <a class="btn btn-outline-dark" data-bs-toggle="modal"  onclick="notuser()">수정</a>
+                    <a onclick="notuser()" class="btn btn-outline-dark">삭제</a>
                 {% endif %}
                 </div>
             </div>
@@ -126,15 +135,10 @@
 .test{
     border:none;
     width:100%;
-    height:100px;
 }
 .test:focus{
     outline:none !important;
 }
 </style>
-<script>
-    function notuser() {
-        alert('권한이 없습니다');
-    }
-</script>
+<script src="{%static 'js/scripts.js'%}"></script>
 {% endblock %}
